<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ScannerResultFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="date"
                android:inputType="date"
                android:maxLength="10"
                android:hint="@string/enter_date"/>

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="time"
                android:inputType="time"
                android:maxLength="5"
                android:hint="@string/enter_time"/>

            <EditText
                android:id="@+id/editPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="number"
                android:inputType="numberDecimal|number"
                android:hint="@string/enter_price"/>

            <EditText
                android:id="@+id/editFN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="number"
                android:inputType="numberDecimal|number"
                android:maxLength="16"
                android:hint="@string/enter_fn"/>

            <EditText
                android:id="@+id/editFD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="number"
                android:inputType="numberDecimal|number"
                android:maxLength="5"
                android:hint="@string/enter_fd"/>

            <EditText
                android:id="@+id/editFP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="number"
                android:inputType="numberDecimal|number"
                android:maxLength="10"
                android:hint="@string/enter_fp"/>

            <Button
                android:id="@+id/enterShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSend" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
